# repo-crawler

./: .gitignore  HarpRepoQuery.ipynb  LICENSE  Notes.md  README.md  environment.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: repository_status.yml
FirmwareGeneration/: generatefirmware.ipynb  masks.csv  registers.csv
examples/: .gitignore  HarpRepoQuery.ipynb
harpcrawler/fileparser/: __init__.py  device_schema.py  readme.py
harpcrawler/gsheets/: __init__.py
harpcrawler/harprepo/: __init__.py  device.py  device_indexing.py  peripheral.py  releases.py
